# y

./: .gitignore  .gitmodules  LICENSE  README.md  dependabot.yml
y-backend/: CMakeLists.txt  README.md  init.sh  main.cpp
y-backend/config/: credentials.example.yaml  server.example.yaml
y-backend/dev/sql/: dump_db.sh.example  y.sql
y-backend/src/: api.hpp  db.hpp  db_config.example.hpp  main.cpp  user.hpp  user_group.hpp  user_right.hpp  util.cpp
y-backend/src/api/: api_user.hpp  api_usergroup.hpp  api_userright.hpp
y-backend/src/orm/: user.hpp  user_session.hpp
y-backend/src/persistent_data/: user_rights.hpp
y-frontend/: .eslintrc.cjs  README.md  index.html  package.json  pnpm-lock.yaml
y-server/: .env.example  .gitignore  Cargo.toml  install.sh
y-server/migrations/: 20231015231212_create_users_table.up.sql  20231015231257_create_user_sessions_table.down.sql  20231015231257_create_user_sessions_table.up.sql  20231015231325_users_add_created_at.down.sql  20231015231325_users_add_created_at.up.sql  20231017212853_create_group_tables.down.sql  20231017212853_create_group_tables.up.sql  20231210231237_add_system_user_groups.down.sql  20231210231237_add_system_user_groups.up.sql  20240106053017_create_default_user_and_groups.down.sql  20240106053017_create_default_user_and_groups.up.sql  20240108191845_create_features_table.down.sql  20240108191845_create_features_table.up.sql  20240110164631_create_storage_feature_tables.down.sql  20240110164631_create_storage_feature_tables.up.sql  20240114001327_create_storage_files_tables.down.sql  20240114001327_create_storage_files_tables.up.sql  20240119164427_add_storage_get_folder_path_proc.down.sql  20240119164427_add_storage_get_folder_path_proc.up.sql  20240126210227_create_storage_staging_files_table.down.sql  20240126210227_create_storage_staging_files_table.up.sql  20240222112849_add_storage_endpoint_artifacts_path.down.sql  20240222112849_add_storage_endpoint_artifacts_path.up.sql  20240303173919_fix_storage_get_folder_path_function.down.sql  20240303173919_fix_storage_get_folder_path_function.up.sql  20240306210540_add_storage_file_info_columns.down.sql  20240306210540_add_storage_file_info_columns.up.sql  20240314152131_create_storage_access_table.down.sql  20240314152131_create_storage_access_table.up.sql  20240502153215_add_storage_generate_entries_access_tree_proc.down.sql  20240502153215_add_storage_generate_entries_access_tree_proc.up.sql  20240515010449_add_storage_endpoint_access_rules_enabled_column.down.sql  20240515010449_add_storage_endpoint_access_rules_enabled_column.up.sql  20240522162717_merge_storage_files_and_folders.down.sql  20240522162717_merge_storage_files_and_folders.up.sql  20240528134849_add_storage_locations_table.down.sql  20240528134849_add_storage_locations_table.up.sql  20240602222701_update_storage_generate_entries_access_tree_proc.down.sql  20240602222701_update_storage_generate_entries_access_tree_proc.up.sql  20240608213047_update_storage_access_constraints.down.sql  (+32 more)
y-server/migrations/2023-08-22-124550_users_add_created_at/: down.sql
y-server/src/: config.rs  db.rs  lib.rs  main.rs  request.rs  right.rs  scheduler.rs  schema.rs  storage_access.rs  storage_archives.rs  storage_endpoint.rs  storage_entry.rs  user.rs  user_group.rs  util.rs  vfs.rs  vfs_manager.rs  vfs_util.rs  ws.rs
y-server/src/api/: instance_config.rs  mod.rs  user_rights.rs
y-server/src/api/admin/: create_storage_endpoint.rs  create_storage_location.rs  create_user.rs  create_user_group.rs  delete_storage_location.rs  delete_user.rs  delete_user_group.rs  features.rs  mod.rs  storage_endpoint.rs  storage_endpoint_set_vfs_config.rs  storage_endpoint_vfs.rs  storage_endpoints.rs  update_feature.rs  update_password.rs  update_storage_endpoint.rs  update_user_group.rs  update_user_group_membership.rs  user.rs  user_group.rs  user_groups.rs  users.rs
y-server/src/api/admin/config/: config_options.rs  config_set.rs  mod.rs
y-server/src/api/auth/: login.rs  logout.rs  me.rs  mod.rs
y-server/src/api/storage/: mod.rs  storage_access_rules_templates.rs  storage_create_access_rules.rs  storage_create_access_rules_template.rs  storage_create_archive.rs  storage_create_folder.rs  storage_create_user_pin.rs  storage_delete_access_rules_template.rs  storage_delete_entries.rs  storage_delete_user_pin.rs  storage_download.rs  storage_download_archive.rs  storage_download_zip.rs  storage_endpoints.rs  storage_entries.rs  storage_entry_add_access_rules_template.rs  storage_entry_remove_access_rules_template.rs  storage_entry_thumbnails.rs  storage_get.rs  storage_get_access_rules.rs  storage_get_folder_path.rs  storage_locations.rs  storage_move_entries.rs  storage_rename_entry.rs  storage_upload.rs  storage_user_archives.rs  storage_user_pins.rs
y-server/src/models/: user.rs  user_session.rs
y-server/src/y_cli/: config.rs  mod.rs  server_user.rs  svc.rs  updates.rs
y-server/upload_staging/: DO_NOT_DELETE
y-web/: .eslintignore  .eslintrc.cjs  .prettierrc  index.html  package.json  pnpm-lock.yaml  tsconfig.json  (+1 more)
(+321 files in other folders)
