[package]
name = "y-server"
version = "0.0.0"
edition = "2021"
authors = ["sk-m <m@ax.mk>"]
description = "y API server"
repository = "https://github.com/sk-m/y"
publish = false
default-run = "y-server"

[dependencies]
actix-web = "4"
dotenvy = "0.15"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0.183", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.26"
rand = "0.8.5"
serde_with = { version = "3.3.0", features = ["chrono"] }
sqlx = { version = "0.8", features = ["runtime-async-std", "postgres", "migrate", "chrono", "uuid", "json"] }
futures = "0.3.28"
serde_json = "1.0.107"
actix-multipart = "0.6.1"
futures-util = "0.3.30"
actix-files = "0.6.5"
regex = "1.10.2"
async-recursion = "1.0.5"
zip = "0.6.6"
actix-rt = "2.9.0"
cron = "0.12.0"
simplelog = "0.12.1"
log = "0.4.20"
rustix = "=0.37.25"
base64 = "0.21.7"
infer = "0.15.0"
validator = { version = "0.17.0", features = ["derive"] }
libc = "0.2.161"
fuser = "0.15.0"
users = "0.11.0"
actix-ws = "0.3.0"
colored = "2.1.0"
inquire = "0.7.5"
clap = { version = "4.5.21", features = ["derive"] }
